@@ -83,6 +83,56 @@ define( function( require ) {
     } );
   }
 
+  /**
+   * Some of our visual representations of "balanced" (ie, balance scales and bar charts)
+   * compare the number of atoms on the left and right side of the equation.
+   *
+   * This algorithm supports those representations by computing the atom counts.
+   * It examines a collection of terms in the equation (either reactants or products),
+   * examines those terms' molecules, and counts the number of each atom type.
+   * The atomCounts argument is modified, so that it contains the counts for the
+   * specified terms.
+   *
+   * This is a brute force algorithm, but our number of terms is always small,
+   * and this is easy to implement and understand.
+   *
+   * @param {[AtomCount]} atomCounts
+   * @param {[EquationTerm]} terms
+   * @param {boolean} isReactants true if the terms are the reactants, false if they are the products
+   */
+  var setAtomCounts = function( atomCounts, terms, isReactants ) {
+    terms.forEach( function( term ) {
+      term.molecule.atoms.forEach( function( atom ) {
+
+        var found = false;
+        for ( var i = 0; i < atomCounts.length; i++ ) {
+          var atomCount = atomCounts[i];
+          // add to an existing count
+          if ( atomCount.element === atom.element ) {
+            if ( isReactants ) {
+              atomCount.reactantsCount += term.userCoefficient;
+            }
+            else {
+              atomCount.productsCount += term.userCoefficient;
+            }
+            found = true;
+            break;
+          }
+        }
+
+        // if no existing count was found, create one.
+        if ( !found ) {
+          if ( isReactants ) {
+            atomCounts.push( new AtomCount( atom.element, term.userCoefficient, 0 ) );
+          }
+          else {
+            atomCounts.push( new AtomCount( atom.element, 0, term.userCoefficient ) );
+          }
+        }
+      } );
+    } );
+  };
+
   return inherit( PropertySet, Equation, {
 
     // @override
@@ -154,57 +204,9 @@ define( function( require ) {
      */
     getAtomCounts: function() {
       var atomCounts = []; //array of AtomCounts
-      this.setAtomCounts( atomCounts, this.reactants, true /* isReactants */ );
-      this.setAtomCounts( atomCounts, this.products, false /* isReactants */ );
+      setAtomCounts( atomCounts, this.reactants, true /* isReactants */ );
+      setAtomCounts( atomCounts, this.products, false /* isReactants */ );
       return atomCounts;
-    },
-
-    /**
-     * Some of our visual representations of "balanced" (ie, balance scales and bar charts)
-     * compare the number of atoms on the left and right side of the equation.
-     *
-     * This algorithm supports those representations by computing the atom counts.
-     * It examines a collection of terms in the equation (either reactants or products),
-     * examines those terms' molecules, and counts the number of each atom type.
-     *
-     * This is a brute force algorithm, but our number of terms is always small,
-     * and this is easy to implement and understand.
-     *
-     * @param {[Number]} atomCounts
-     * @param {[EquationTerm]} terms
-     * @param {boolean} isReactants true if the terms are the reactants, false if they are the products
-     */
-    setAtomCounts: function( atomCounts, terms, isReactants ) {
-      terms.forEach( function( term ) {
-        term.molecule.atoms.forEach( function( atom ) {
-
-          var found = false;
-          for ( var i = 0; i < atomCounts.length; i++ ) {
-            var atomCount = atomCounts[i];
-            // add to an existing count
-            if ( atomCount.element === atom.element ) {
-              if ( isReactants ) {
-                atomCount.reactantsCount += term.userCoefficient;
-              }
-              else {
-                atomCount.productsCount += term.userCoefficient;
-              }
-              found = true;
-              break;
-            }
-          }
-
-          // if no existing count was found, create one.
-          if ( !found ) {
-            if ( isReactants ) {
-              atomCounts.push( new AtomCount( atom.element, term.userCoefficient, 0 ) );
-            }
-            else {
-              atomCounts.push( new AtomCount( atom.element, 0, term.userCoefficient ) );
-            }
-          }
-        } );
-      } );
     },
 
     /**
